<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:orientation="vertical"
                                                   android:layout_width="wrap_content"
                                                   android:layout_height="match_parent" android:id="@+id/linearLayout">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etTitle" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtAnnounceTitle"
            app:layout_constraintStart_toEndOf="@+id/textView6" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/input_title"/>
    <TextView
            android:text="@string/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/txtAnnounceTitle"
            app:layout_constraintBottom_toBottomOf="@+id/etTitle" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:id="@+id/textView6"/>
    <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtAnnounceTitle" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" tools:text="Создать новое объявление" android:gravity="center"/>
    <TextView
            android:text="@string/annoucement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/etMessage" app:layout_constraintBottom_toBottomOf="@+id/etMessage"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etMessage" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/etTitle" app:layout_constraintStart_toEndOf="@+id/textView7"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/input_text"/>
    <TextView
            android:text="@string/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/etPrice" app:layout_constraintBottom_toBottomOf="@+id/etPrice"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/etPrice" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/etMessage" app:layout_constraintStart_toEndOf="@+id/textView8"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/price_grn" android:inputType="number"/>
    <TextView
            android:text="@string/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/etName" app:layout_constraintBottom_toBottomOf="@+id/etName"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etName" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/etPrice" app:layout_constraintStart_toEndOf="@+id/textView9"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/author_mess"/>
    <TextView
            android:text="@string/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            app:layout_constraintTop_toTopOf="@+id/etCity" app:layout_constraintBottom_toBottomOf="@+id/etCity"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etCity" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/etName" app:layout_constraintStart_toEndOf="@+id/textView10"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/city_hint"/>
    <TextView
            android:text="@string/tel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtTel" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/etTel" app:layout_constraintBottom_toBottomOf="@+id/etTel"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/etTel" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/etCity" app:layout_constraintStart_toEndOf="@+id/txtTel"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/tel_hint" android:maxLength="13" android:inputType="phone"/>
    <Button
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSave" android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/etTel"/>
</androidx.constraintlayout.widget.ConstraintLayout>