<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content" android:padding="24dp">

    <TextView
            android:text="@string/delete_anoucement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView" android:gravity="center"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <Button
                android:text="@string/yes_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btnYes" android:layout_weight="1"/>
        <Button
                android:text="@string/no_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btnNo" android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>